--- a/spring-bookshelf/src/main/resources/application.properties
+++ b/spring-bookshelf/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=bookshelf
+spring.datasource.url=jdbc:postgresql://localhost/shelf_database
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+
