--- a/spring-bookshelf/src/main/resources/application.properties
+++ b/spring-bookshelf/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=bookshelf
-spring.datasource.url=jdbc:postgresql://localhost/shelf_database
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_bookshelf
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
