--- a/spring-bookshelf/src/main/resources/application.properties
+++ b/spring-bookshelf/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.format-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+api.security.token.secret=${JWT_SECRET:highwater}
