--- a/spring-bookshelf/pom.xml
+++ b/spring-bookshelf/pom.xml
@@ -11,10 +11,10 @@
 	<groupId>br.com.spedine</groupId>
 	<artifactId>bookshelf</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>bookshelf</name>
+	<name>belfosh-api</name>
 	<description>Spring Boot project</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
