--- a/spring-bookshelf/src/main/resources/application.properties
+++ b/spring-bookshelf/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=bookshelf
-spring.datasource.url=jdbc:postgresql://localhost:5433/spring_bookshelf
+spring.datasource.url=jdbc:postgresql://localhost:5433/belfosh_db
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
