refactor: resolved bug when adding a new book + new migrations
refactor: resolved bug when adding a new book + new migrations

--- a/spring-bookshelf/src/main/resources/application.properties
+++ b/spring-bookshelf/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=bookshelf
+spring.application.name=belfosh
 spring.datasource.url=jdbc:postgresql://localhost:5433/belfosh_db
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
